@@ -64,7 +64,7 @@ public class RaftPartitionGroup implements ManagedPartitionGroup {
   private final Map<PartitionId, RaftPartition> partitions = Maps.newConcurrentMap();
   private final List<PartitionId> sortedPartitionIds = Lists.newCopyOnWriteArrayList();
   private final String snapshotSubject;
-  private Collection<PartitionMetadata> metadata;
+  private final Collection<PartitionMetadata> metadata;
   private ClusterCommunicationService communicationService;
 
   public RaftPartitionGroup(final RaftPartitionGroupConfig config) {
@@ -81,6 +81,24 @@ public class RaftPartitionGroup implements ManagedPartitionGroup {
               sortedPartitionIds.add(p.id());
             });
     Collections.sort(sortedPartitionIds);
+
+    metadata = determinePartitionDistribution(config);
+  }
+
+  private Collection<PartitionMetadata> determinePartitionDistribution(
+      final RaftPartitionGroupConfig config) {
+    final Collection<PartitionMetadata> metadataCollection;
+    final var members =
+        config.getMembers().stream().map(MemberId::from).collect(Collectors.toSet());
+    metadataCollection =
+        config
+            .getPartitionConfig()
+            .getPartitionDistributor()
+            .distributePartitions(members, sortedPartitionIds, replicationFactor);
+
+    metadataCollection.forEach(
+        partitionMetadata -> partitions.get(partitionMetadata.id()).setMetadata(partitionMetadata));
+    return metadataCollection;
   }
 
   private static Collection<RaftPartition> buildPartitions(final RaftPartitionGroupConfig config) {
@@ -173,26 +191,16 @@ public class RaftPartitionGroup implements ManagedPartitionGroup {
   public CompletableFuture<ManagedPartitionGroup> join(
       final PartitionManagementService managementService) {
 
-    // We expect to bootstrap partitions where leadership is equally distributed.
-    // First member of a PartitionMetadata is the bootstrap leader
-    final var members =
-        config.getMembers().stream().map(MemberId::from).collect(Collectors.toSet());
-    metadata =
-        config
-            .getPartitionConfig()
-            .getPartitionDistributor()
-            .distributePartitions(members, sortedPartitionIds, replicationFactor);
-
     communicationService = managementService.getMessagingService();
     communicationService.<Void, Void>subscribe(snapshotSubject, m -> handleSnapshot());
     final List<CompletableFuture<Partition>> futures =
         metadata.stream()
             .map(
-                metadata -> {
-                  final RaftPartition partition = partitions.get(metadata.id());
-                  return partition.open(metadata, managementService);
+                partitionMetadata -> {
+                  final RaftPartition partition = partitions.get(partitionMetadata.id());
+                  return partition.open(managementService);
                 })
-            .collect(Collectors.toList());
+            .toList();
     return CompletableFuture.allOf(futures.toArray(new CompletableFuture[futures.size()]))
         .thenApply(
             v -> {
